--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SCENES: Prompts to Reflect</title>
     <meta property="fc:frame" content="vNext">
     <meta property="fc:frame:image" content="https://gateway.pinata.cloud/ipfs/QmeWaZhPs6dvUduSa9XwD35Pm7yUntbWiTecTsm5y61xbp/image1.jpg">
+    <meta property="fc:frame:image:aspect_ratio" content="1:1">
     <meta property="fc:frame:button:1" content="New">
     <meta property="fc:frame:button:1:action" content="post">
     <meta property="fc:frame:post_url" content="https://084385d4-44c8-4223-affa-aba12c26da88-00-13j6g2iterbqs.picard.replit.dev/new">
